--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wazuh",
   "version": "3.11.4",
-  "revision": "0858",
-  "code": "0858-0",
+  "revision": "0870",
+  "code": "0870-0",
   "kibana": {
     "version": "7.6.1"
   },
@@ -42,10 +42,11 @@
   "dependencies": {
     "angular-animate": "1.7.8",
     "angular-chart.js": "1.1.1",
+    "d3": "^5.12.0",
     "angular-cookies": "1.6.5",
     "angular-material": "1.1.18",
+    "axios": "^0.19.0",
     "babel-polyfill": "^6.13.0",
-    "dom-to-image": "^2.6.0",
     "install": "^0.10.1",
     "js2xmlparser": "^3.0.0",
     "json2csv": "^4.1.2",
@@ -54,6 +55,9 @@
     "pdfmake": "^0.1.37",
     "pug-loader": "^2.4.0",
     "querystring-browser": "1.0.4",
+    "react-redux": "^7.1.1",
+    "react-codemirror": "^1.0.0",
+    "redux": "^4.0.4",
     "simple-tail": "^1.1.0",
     "timsort": "^0.3.0",
     "winston": "3.0.0"
