Add api selector

--- a/wazuh.yml
+++ b/wazuh.yml
@@ -63,6 +63,13 @@
 #wazuh.shards          : 1
 #wazuh.replicas        : 0
 #
+# -------------------------------- API selector --------------------------------
+#
+# Defines if the user is allowed to change the selected
+# API directly from the Wazuh app top menu.
+# Default: false
+#api.selector: false
+#
 # --------------------------- Index pattern selector ---------------------------
 #
 # Defines if the user is allowed to change the selected
