--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wazuh",
-  "version": "3.11.4",
+  "version": "3.11.5",
   "revision": "0575",
   "code": "0575-0",
   "kibana": {
@@ -53,7 +53,7 @@
     "winston": "3.0.0"
   },
   "devDependencies": {
-    "@kbn/plugin-helpers": "link:../../packages/kbn-plugin-helpers",
+    "@elastic/plugin-helpers": "^7.1.8",
     "babel-eslint": "^8.2.6",
     "chai": "^4.1.2",
     "eslint": "^5.10.0",
