--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "angular-chart.js": "1.1.1",
     "angular-cookies": "1.6.5",
     "angular-material": "1.1.18",
-    "babel-polyfill": "^6.13.0",
+    "axios": "^0.19.0",
+    "d3": "^5.12.0",
     "install": "^0.10.1",
     "js2xmlparser": "^3.0.0",
     "json2csv": "^4.1.2",
@@ -53,7 +54,10 @@
     "pdfmake": "^0.1.37",
     "pug-loader": "^2.4.0",
     "querystring-browser": "1.0.4",
-    "simple-tail": "^1.1.0",
+    "react-codemirror": "^1.0.0",
+    "react-redux": "^7.1.1",
+    "read-last-lines": "^1.7.2",
+    "redux": "^4.0.4",
     "timsort": "^0.3.0",
     "winston": "3.0.0"
   },
