Update 3.12-7.7 with ODFE fix (#2254)
* Added ODFE fix

* Removed dependencies

--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "angular-chart.js": "1.1.1",
     "angular-cookies": "1.6.5",
     "angular-material": "1.1.18",
-    "babel-polyfill": "^6.13.0",
     "install": "^0.10.1",
     "js2xmlparser": "^3.0.0",
     "json2csv": "^4.1.2",
@@ -53,7 +52,7 @@
     "pdfmake": "^0.1.37",
     "pug-loader": "^2.4.0",
     "querystring-browser": "1.0.4",
-    "simple-tail": "^1.1.0",
+    "read-last-lines": "^1.7.2",
     "timsort": "^0.3.0",
     "winston": "3.0.0"
   },
