--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "version": "7.8.0"
   },
   "description": "Wazuh app",
-  "main": "index.js",
+  "main": "index.ts",
   "keywords": [
     "kibana",
     "wazuh",
