--- a/package.json
+++ b/package.json
@@ -50,18 +50,17 @@
     "install": "^0.10.1",
     "js2xmlparser": "^3.0.0",
     "json2csv": "^4.1.2",
+    "jwt-decode": "^2.2.0",
     "needle": "^2.0.1",
     "node-cron": "^1.1.2",
     "pdfmake": "^0.1.37",
     "pug-loader": "^2.4.0",
     "querystring-browser": "1.0.4",
-    "react-codemirror": "^1.0.0",
     "react-redux": "^7.1.1",
     "read-last-lines": "^1.7.2",
     "redux": "^4.0.4",
     "timsort": "^0.3.0",
-    "winston": "3.0.0",
-    "brace": "^0.11.1"
+    "winston": "3.0.0"
   },
   "devDependencies": {
     "@elastic/plugin-helpers": "^7.1.8",
