--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "pdfmake": "^0.1.37",
     "pug-loader": "^2.4.0",
     "querystring-browser": "1.0.4",
+    "react-codemirror": "^1.0.0",
     "react-redux": "^7.1.1",
     "read-last-lines": "^1.7.2",
     "redux": "^4.0.4",
