Added an script to generate Wazuh API 4.0:   - Added script   - Added sh script to remove the result json file and replace the current file in Wazuh app   - Added a file with previous documentation link mapped with the endpoints   - Added a script to package.json to run the task

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "test:ui:runner": "node ../../scripts/functional_test_runner.js",
     "test:server": "plugin-helpers test:server",
     "test:browser": "plugin-helpers test:browser",
-    "test:jest": "node scripts/jest"
+    "test:jest": "node scripts/jest",
+    "generate:api-4.0-info": "cd scripts/generate-api-4.0-info;./generate-api-4.0-info.sh;cd ..;cd .."
   },
   "dependencies": {
     "angular-animate": "1.7.8",
