--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "revision": "4002",
   "code": "4002-0",
   "kibana": {
-    "version": "7.9.2"
+    "version": "7.9.1"
   },
   "description": "Wazuh app",
   "main": "index.js",
@@ -65,7 +65,7 @@
     "brace": "^0.11.1"
   },
   "devDependencies": {
-    "@kbn/plugin-helpers": "link:../../packages/kbn-plugin-helpers",
+    "@elastic/plugin-helpers": "^7.1.8",
     "@types/node-cron": "^2.0.3",
     "babel-eslint": "^8.2.6",
     "chai": "^4.1.2",
