Adapt to Kibana v7.10.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
   },
   "include": [
     "server/**/*",
-    "public/**/*"
+    "public/**/*",
+    "util/**/*"
   ],
   "exclude": [
     "public/**/*.test.ts",
