--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "es": "node ../../scripts/es",
     "start": "plugin-helpers start",
     "prebuild": "tsc; find . -name \"*.ts*\" -type f -not -path \"./node_modules/*\" -delete",
-    "build": "plugin-helpers build",
-    "test": "_mocha test/**/*",
+    "build": "yarn plugin-helpers build",
+    "plugin-helpers": "node ../../scripts/plugin_helpers",
     "test:ui:runner": "node ../../scripts/functional_test_runner.js",
     "test:server": "plugin-helpers test:server",
     "test:browser": "plugin-helpers test:browser",
@@ -46,39 +46,23 @@
     "angular-chart.js": "1.1.1",
     "angular-cookies": "1.6.5",
     "angular-material": "1.1.18",
-    "axios": "^0.19.0",
-    "d3": "^5.12.0",
     "install": "^0.10.1",
     "js2xmlparser": "^3.0.0",
     "json2csv": "^4.1.2",
     "jwt-decode": "^2.2.0",
     "needle": "^2.0.1",
     "node-cron": "^1.1.2",
-    "pdfmake": "^0.1.37",
     "pug-loader": "^2.4.0",
     "querystring-browser": "1.0.4",
     "react-codemirror": "^1.0.0",
-    "react-redux": "^7.1.1",
     "read-last-lines": "^1.7.2",
-    "redux": "^4.0.4",
     "timsort": "^0.3.0",
-    "winston": "3.0.0",
-    "brace": "^0.11.1"
+    "winston": "3.0.0"
   },
   "devDependencies": {
-    "@elastic/plugin-helpers": "^7.1.8",
     "@types/node-cron": "^2.0.3",
-    "babel-eslint": "^8.2.6",
-    "chai": "^4.1.2",
-    "eslint": "^5.10.0",
     "eslint-plugin-async-await": "^0.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-react": "^7.13.0",
-    "mocha": "^5.2.0",
-    "prettier": "^1.14.2",
     "tslint": "^5.11.0",
-    "typescript": "^3.0.1",
     "typescript-eslint-parser": "^18.0.0"
   }
 }
