--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "alwaysStrict": false,
     "noImplicitUseStrict": false,
+    "noImplicitAny": false,
   },
   "include": [
     "server/**/*",
