--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "pug-loader": "^2.4.0",
     "querystring-browser": "1.0.4",
     "react-codemirror": "^1.0.0",
+    "react-cookie": "^4.0.3",
     "read-last-lines": "^1.7.2",
     "timsort": "^0.3.0",
     "winston": "3.0.0"
