Fixed package.json for build and updated to 4.0.4 4016

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "noImplicitAny": false,
   },
   "include": [
+    "index.ts",
     "server/**/*",
     "public/**/*",
     "common/**/*"
@@ -20,6 +21,7 @@
     "public/**/*.test.ts",
     "public/**/*.test.tsx",
     "server/**/*.test.ts",
+    "common/**/*.test.ts",
     "../../src/**/*",
     "**/request.ts",
     "src/**/*"
