--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "homepage": "https://www.wazuh.com/",
   "scripts": {
-    "preinstall": "node ../../preinstall_check",
     "pretty": "prettier --single-quote \"{,!(node_modules)/**/}*.js\" --write",
     "tslint": "tslint -c .tslint.yml server/**/*.ts server/**/*.tsx public/**/*.ts public/**/*.tsx",
     "lint": "eslint . --ext .js -c .eslintrc.json --color",
@@ -43,12 +42,14 @@
     "angular-animate": "1.7.8",
     "angular-chart.js": "1.1.1",
     "angular-material": "1.1.18",
+    "axios": "^0.21.1",
     "install": "^0.10.1",
     "js2xmlparser": "^3.0.0",
     "json2csv": "^4.1.2",
     "jwt-decode": "^2.2.0",
     "needle": "^2.0.1",
     "node-cron": "^1.1.2",
+    "pdfmake": "0.1.65",
     "pug-loader": "^2.4.0",
     "querystring-browser": "1.0.4",
     "react-codemirror": "^1.0.0",
