--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "kbn": "node ../../scripts/kbn",
     "es": "node ../../scripts/es",
     "start": "plugin-helpers start",
-    "build": "yarn plugin-helpers build",
+    "build": "yarn plugin-helpers build --skip-archive;node postbuild",
     "plugin-helpers": "node ../../scripts/plugin_helpers",
     "test:ui:runner": "node ../../scripts/functional_test_runner.js",
     "test:server": "plugin-helpers test:server",
     "test:browser": "plugin-helpers test:browser",
     "test:jest": "node scripts/jest",
-    "generate:api-4.0-info": "cd scripts/generate-api-4.0-info;./generate-api-4.0-info.sh;cd ..;cd .."
+    "generate:api-4.0-info": "cd scripts/generate-api-4.0-info;./generate-api-4.0-info.sh;cd ..;cd ..",
+    "postbuild": "mkdir build/kibana/wazuh/public;cp -R public/assets build/kibana/wazuh/public; cd build; zip wazuh-7.10.0.zip kibana -r; cd .."
   },
   "dependencies": {
     "angular-animate": "1.7.8",
