--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test:server": "plugin-helpers test:server",
     "test:browser": "plugin-helpers test:browser",
     "test:jest": "node scripts/jest",
-    "generate:api-4.0-info": "cd scripts/generate-api-4.0-info;./generate-api-4.0-info.sh;cd ..;cd ..",
+    "generate:api-4.0-info": "cd scripts/generate-api-4.0-info;./generate-api-4.0-info.sh;cd ../..",
     "postbuild": "mkdir build/kibana/wazuh/public;cp -R public/assets build/kibana/wazuh/public; cd build; zip wazuh-7.10.0.zip kibana -r; cd .."
   },
   "dependencies": {
